--- a/DOM/动画/基础动画库以动画原理/move2.html
+++ b/DOM/动画/基础动画库以动画原理/move2.html
@@ -6,7 +6,7 @@
     <style>
         ul,li{list-style: none;}
         #div1{
-            width: 200px;height: 200px;background:red;position: absolute;left: 600px;top:0;
+            width: 200px;height: 200px;background:red;position: absolute;left: 600px;top:0;border-radius:50%;
         }
         .ul{position: absolute;left: 100px;top: 300px;}
         .ul li{float: left;margin-right: 10px;color: #FFF;cursor: pointer;}
@@ -26,9 +26,12 @@
     var oDiv=document.getElementById("div1");
     var oLeft=document.getElementById("left");
     var oRight=document.getElementById("right");
-    oLeft.onclick=function(){move(this,0)};
-    oRight.onclick=function(){move(this,800)};
+    var timer=null;//全局变量；
+    oLeft.onclick=function(){move(oDiv,0)};
+    //点完left后，move运行，还要开启一个定时器；等30ms；timer=function(){move(ele,target)},在等待时候，15ms点了一下右，move方法再去执行；会清除timer；
+    oRight.onclick=function(){move(oDiv,800)};
     function move(ele,target){
+        clearTimeout(timer);
         var cur=getCss(ele,"left");
         if(cur<target){//当前位置小于目标值；
             if(cur+11>=target){//临界值的判断；
@@ -36,14 +39,14 @@
             }else{
                 ele.style.left=getCss(ele,"left")+11+"px";
             }
-            window.setTimeout(function(){move(ele,target)},30)
+            timer=window.setTimeout(function(){move(ele,target)},30)
         }else if(cur>target){//当前位置大于目标值
             if(cur-11<=target){
                 ele.style.left=target+"px";
             }else{
                 ele.style.left=getCss(ele,"left")-11+"px";
             }
-            window.setTimeout(function(){move(ele,target)},30)
+            timer=window.setTimeout(function(){move(ele,target)},30)
         }
     };
     function getCss(ele,attr){
