--- a/DOM/动画/封装动画库/封装简单动画库.html
+++ b/DOM/动画/封装动画库/封装简单动画库.html
@@ -30,8 +30,8 @@
         "background":"blue"
     };
     oDiv.onclick=function(){startMove(oDiv,jsonStr);};
-    function startMove(ele, json, fnEnd) {//json是一个包含样式的JSON格式字符串；
-        var MAX=18;
+    function startMove(ele, json, fnEnd) {//json是一个包含样式的JSON格式字符串,也可以是对象格式；
+        var MAX=18;//如果是匀速运动，可以通过这个数控制匀速；如果是变速运动，则不需要这一行；
         clearInterval(ele.timer);
         ele.timer=setInterval(function (){
             var booleanTarget=true;
@@ -45,8 +45,8 @@
                     var cur=parseInt(setCss(ele, name));//对象的初始值；
                 }
                 var speed=(iTarget-cur)/5;//速度=(目标值-初始值)/一个数，属于减速运动；
-                speed=speed>0?Math.ceil(speed):Math.floor(speed);//速度的取整；
-                if(Math.abs(speed)>MAX)speed=speed>0?MAX:-MAX;
+                speed=speed>0?Math.ceil(speed):Math.floor(speed);//减速运动的，速度的取整；
+                if(Math.abs(speed)>MAX)speed=speed>0?MAX:-MAX;//如果是匀速，可以通过这个来控制速度；和上面的speed只能取一个计算；
 
                 if(name=='opacity') {//如果输入透明度，需要为80这种的，不能是0.8
                     ele.style.filter='alpha(opacity:'+(cur+speed)+')';
