--- a/DOM/动画/twenn动画/1、基础思路/基础框架思路去耦合-优化3-多方向封装.html
+++ b/DOM/动画/twenn动画/1、基础思路/基础框架思路去耦合-优化3-多方向封装.html
@@ -17,8 +17,8 @@
             box-shadow: 5px 5px 10px blue;
             border-radius: 10px;
             border: 2px solid #ff0000;
-            opacity: 0.9;
-            filter:alpha(opacity=90);
+            opacity: 0.4;
+            filter:alpha(opacity=40);
         }
     </style>
 </head>
@@ -28,41 +28,66 @@
 </html>
 <script>
     var oDiv=document.getElementById("div1");
+    var jsonStr={
+        "left":500,
+        top:400,
+        "width":"200",
+        "height":"200",
+        "opacity":"0.8"
+    };
     oDiv.onclick = function(){
         if(!this.timer){
-            animate(this,"left",500,1000,toGreen);
+            starMove(this,jsonStr,1000,toGreen);
+        }
+    };
+    function starMove(ele,jsonStr,duration,fnCallback){
+        var oBegin={};//不同方向的起始值；
+        var oChange={};//不同方向的运动距离；
+        var booleanNum=0;
+        for(var attr in jsonStr){
+            var begin=setCss(ele,attr);
+            var target=jsonStr[attr];
+            var change=target-begin;
+            if(change){
+                oBegin[attr]=begin;
+                oChange[attr]=change;
+                booleanNum++;
+            }
+        }
+        if(booleanNum===0){
+            if(typeof fnCallback=="function"){
+                fnCallback.call(ele);
+            }
+            return;
+        }else{
+            var interval=13;
+            var times=0;
+            clearInterval(ele.timer);
+            ele.timer=window.setInterval(move,interval);
+            function move(){
+                times+=interval;
+                if(times>=duration){
+                    clearInterval(ele.timer);
+                    ele.timer=null;
+                    for(var attr in jsonStr){
+                        setCss(ele,attr,jsonStr[attr]);
+                    }
+                    if(typeof fnCallback=="function"){
+                        fnCallback.call(ele);
+                    }
+                }else{
+                    for(var attr in oChange){
+                        var targetNumber=oBegin[attr]+oChange[attr]*(times/duration);
+                        setCss(ele,attr,targetNumber);
+                    }
+                }
+            }
         }
     };
 
-    function animate(ele,attr,target,duration,fnCallback){
-        var times=0;
-        var begin=setCss(ele,attr);//起点
-        var change=target-begin;//总的移动距离=目的地-其实的位置;
-        var nInterval=13;//一步走多少；步长；
-        if(change===0){//解决无效运动，changge=begin;
-            if(typeof fnCallback=="function"){
-                fnCallback.call(ele);
-                return;
-            }
-        };
-
-        clearInterval(ele.timer);
-        ele.timer=window.setInterval(move,nInterval);
-        function move(){
-            times+=nInterval;
-            if(times>=duration){
-                setCss(ele,attr,target);
-                clearInterval(ele.timer);
-                ele.timer=null;//动画停止的时候，变为null；这样就成为elel这个元素是否在运动的判断依据了；
-                /*动画行为结束*/
-                if(typeof fnCallback=="function"){
-                    fnCallback.call(ele);
-                }
-            }else{
-                var targetNumber=begin+change*(times/duration);
-                setCss(ele,attr,targetNumber);
-            }
-        }
+    //回调方法；
+    function toGreen(){
+        setCss(this,"backgroundColor","green");
     };
     function setCss(curEle,attr,value) {//设置CSS属性值和获取CSS；如果三个参数就是设置，2个参数就是获取；att是attribute的缩写；
         if(typeof value==="undefined"){//如果有第三个参数，就是设置Css；如果没有就是获取Css；
@@ -76,6 +101,13 @@
                     curEle["style"][attr] = value;
                     curEle["style"]["filter"] = "alpha(opacity=" + (value * 100) + ")";
                     break;
+                case "float":
+                    curEle["style"].cssFloat = value;
+                    curEle["style"].styleFloat = value;
+                    break;
+                case "backgroundColor":
+                    curEle["style"][attr] = value;
+                    break;
                 case "zIndex":
                     curEle["style"][attr] = value;
                     break;
@@ -85,22 +117,6 @@
         }
     };
 
-    //回调方法；
-    function toGreen(){
-        this.style.backgroundColor="green"
-    };
-    function fnRight(){
-        animate(this,"left",600,1000,fnDown);
-    }
-    function fnDown(){
-        animate(this,"top",600,1000,fnLeft);
-    }
-    function fnLeft(){
-        animate(this,"left",0,1000,fnUp);
-    }
-    function fnUp(){
-        animate(this,"top",0,1000,fnRight);
-    }
 </script>
 
 
