--- a/DOM/事件/基础事件库和拖拽/7、解决全部兼容性问题.html
+++ b/DOM/事件/基础事件库和拖拽/7、解决全部兼容性问题.html
@@ -84,7 +84,7 @@
             var aryEvent=ele["aEvent"+type];
             for(var i=0;i<aryEvent.length;i++){
                 if(a[i]==fn){
-//                    aryEvent.splice(i,1);//数组塌陷
+//                    aryEvent.splice(i,1);//数组塌陷解决
                     a[i]=null;
                     return;
                 }
