--- a/DOM/事件/基础事件库和拖拽/7、解决全部兼容性问题.html
+++ b/DOM/事件/基础事件库和拖拽/7、解决全部兼容性问题.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="div1">
-    <a href="javascript:;">AAAAAAA</a>
+    <a href="http://broszhu.com/">朱安邦的博客</a>
 </div>
 </body>
 </html>
@@ -17,13 +17,16 @@
     var oDiv=document.getElementById("div1");
     var oA=oDiv.getElementsByTagName("a")[0];
 
+    //on(oA,"click",fnTest);//只能监测A的
+    on(document.documentElement,"click",fnTest);//可以检测DIV,BODY,HTML；
+
+
     function fnTest(e){
-        e=e||window.event;
-        this.innerHTML="当前鼠标的坐标X: "+ e.pageX+"当前鼠标的坐标Y: "+ e.pageY;
-        /*下面是不支持的*/
-/*        e.preventDefault();
-        e.target;
-        e.stopPropagation();*/
+        /*不需要写window.event了，因为在run里已经解决了*/
+        console.log(this);
+        console.log(e.target.nodeName);
+        e.preventDefault();//阻止默认行为；
+        e.stopPropagation();//不会传播
     }
 
         /*下面是解决好this关键字的了,最终的*/
@@ -65,8 +68,9 @@
             }
         }
     };
-    /*下面是解决一个元素同一类似事件的执行顺序*/
 
+
+    /*下面是解决一个元素同一类似事件的执行顺序*/
     function on(ele,type,fn){
         if(!ele["aEvent"+type]){
             ele["aEvent"+type]=[];
@@ -93,62 +97,30 @@
     }
 
 
+    /*事件兼容性问题，都在run上解决好*/
     function run(e){
         e=e||window.event;
+        if(!e.target){
+            e.target= e.srcElement;
+            e.pageX=(document.documentElement.scrollLeft||document.body.scrollLeft)+ e.clientX;
+            e.pageY=(document.documentElement.scrollTop||document.body.scrollTop)+ e.clientY;
+            e.stopPropagation=function(){e.cancelBubble=true;}//阻止事件传播;
+            e.preventDefault=function(){e.returnValue=false;}//阻止事件默认行为;
+        }
+        /*上面是IE不支持的*/
+
         var a=this["aEvent"+e.type];
         for(var i=0;i< a.length;){
             /*下面是防止数组塌陷的*/
-            if(typeof a[i]="function"){
-                a[i].call(this,e);//this后面加e；就解决了e的兼容性问题；因为想this主体传了e；
-                i++
+            if(typeof a[i]=="function"){
+                //a[i].call(this);//this指向当前被绑定元素；
+                a[i].call(this,e);//this后面加e；就解决了e的兼容性问题；因为想this主体传了e；具体的函数就不需要再解决e的兼容了；
+                i++;
             }else{
                 /*如果是空的，删掉；不删也是可以的*/
                 a.splice(i,1);
             }
         }
     }
-
-    on(oDiv,"click",fn1);
-    on(oDiv,"click",fn2);
-    on(oDiv,"click",fn3);
-    on(oDiv,"click",fn4);
-    on(oDiv,"click",fn5);
-    on(oDiv,"click",fn6);
-    on(oDiv,"click",fn7);
-    on(oDiv,"click",fn8);
-    on(oDiv,"click",fn9);
-    on(oDiv,"click",fn10);
-
-
-
-
-
-
-    function fn1(){console.log("执行函数fn1")}
-    function fn2(){console.log("执行函数fn2")}
-    function fn3(){console.log("执行函数fn3")}
-    function fn4(){console.log("执行函数fn4")}
-    function fn5(){console.log("执行函数fn5")}
-    function fn6(){console.log("执行函数fn6")}
-    function fn7(){console.log("执行函数fn7")}
-    function fn8(){console.log("执行函数fn8")}
-    function fn9(){console.log("执行函数fn9")}
-    function fn10(){console.log("执行函数fn10")}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </script>
