--- a/DOM/事件/3、事件和观察者模式/5、理解设计模式.html
+++ b/DOM/事件/3、事件和观察者模式/5、理解设计模式.html
@@ -55,6 +55,10 @@
     function wachFoot(){console.log("那顺便再洗一次脚吧！")}
 
 
+    /*写一段代码。用来模拟红绿灯控制车辆行驶
+    * 停车订阅红灯
+    * 开车订阅绿灯
+    * */
 
 
  </script>
