--- a/jQuery的设计原理/导航页/01-变幻菜单/变幻.htm
+++ b/jQuery的设计原理/导航页/01-变幻菜单/变幻.htm
@@ -1,83 +1,69 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+    <meta http-equiv="Content-Type" content="text/html; charset=gb2312"/>
     <title>变幻菜单</title>
     <style type="text/css">
-        a
-        {
-            color: #FFFF99;
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        ul, li {
+            list-style: none
+        }
+
+        a {
             text-decoration: none;
+            color: #000;
         }
-        a:hover
-        {
-            color: #FFFFFF;
-            text-decoration: underline;
+
+        #top {
+            width: 950px;
+            height: 25px;
+            background: orange;
+            margin: 125px auto 0;
         }
-        .top-nav
-        {
-            padding: 10px 10px 0;
-            font-size: 12px;
-            font-weight: bold;
-            margin: 1em 0 0;
-            list-style: none;
+
+        #top .top-nav {
+            height: 25px;
             border-bottom: 8px solid #DC4E1B;
-            overflow: hidden;
         }
-        .top-nav li
-        {
-            float: left;
-            margin-right: 1px;
-        }
-        .top-nav li a
-        {
+
+        #top .top-nav li {
+            height: 25px;
+            line-height: 25px;
+            display: inline-block;
             position: relative;
-            z-index: 0;
-        }
-        .top-nav li a span
-        {
-            position: absolute;
-            left: -999em;
-            visibility: hidden;
+            overflow: hidden;
+
         }
 
-        .top-nav li a, .top-nav li a:hover span
-        {
-            line-height: 20px;
-            text-decoration: none;
-            background: #DDDDDD;
-            color: #666666;
+        #top .top-nav li a {
             display: block;
-            width: 80px;
-            text-align: center;
+            padding: 0 10px;
+            position: relative;
         }
 
-        .top-nav li a:hover span
-        {
-            padding-top: 2px;
-            visibility: visible;
-            top: 0;
+        #top .top-nav li a span {
+            display: block
+        }
+
+        #top .top-nav li:hover a {
+            top: -25px;
             left: 0;
-            cursor: pointer;
-        }
-
-        .top-nav li a:hover, .top-nav li a:hover span
-        {
-            color: #FFFFFF;
             background: #DC4E1B;
         }
-
-
     </style>
 </head>
 <body>
-    <div id="top">
-        <ul class="top-nav">
-            <li><a href="#">首页<span>Home</span></a></li>
-            <li><a href="#">课程大厅<span>Course</span></a></li>
-            <li><a href="#">学习中心<span>Learn</span></a></li>
-            <li><a href="#">关于我们<span>About</span></a></li>
-        </ul>
+<div id="top">
+    <ul class="top-nav">
+        <li><a href="#">首页<span>Home</span></a></li>
+        <li><a href="#">课程大厅<span>Course</span></a></li>
+        <li><a href="#">学习中心<span>Learn</span></a></li>
+        <li><a href="#">关于我们<span>About</span></a></li>
+    </ul>
 
 </body>
 </html>
